fix: fixed user list container overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -87,6 +87,9 @@
   gap: 20px;
   padding-left: 5%;
   padding-right: 5%;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
 .chatmenutop {
@@ -112,6 +115,11 @@
   border-right: 3px solid black;
   height: 100vh;
   width: 20vw;
+}
+
+.overflowdiv {
+  overflow-y: scroll;
+  height: 85%;
 }
 
 .wrap {
